[gd_scene load_steps=5 format=3 uid="uid://b7b068nha1hmy"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_t2l2v"]
[ext_resource type="FontFile" uid="uid://bw1qxndkgn2l4" path="res://assets/fonts/EquipmentPro.woff" id="2_w5ibt"]
[ext_resource type="Texture2D" uid="uid://b4b038rl1xctp" path="res://assets/art/bugblaster.png" id="3_keby2"]

[sub_resource type="Theme" id="Theme_pb0ql"]
default_font = ExtResource("2_w5ibt")
default_font_size = 24

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t2l2v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 6.0
offset_top = -4.0
offset_right = 139.0
offset_bottom = 20.0
theme_override_constants/separation = 1

[node name="ScoreContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 1

[node name="Score" type="Label" parent="HBoxContainer/ScoreContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_pb0ql")
theme_override_font_sizes/font_size = 24
text = "00"
horizontal_alignment = 2
justification_flags = 35
clip_text = true

[node name="LifeContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/LifeContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_keby2")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/LifeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_keby2")
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/LifeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_keby2")
stretch_mode = 2

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/LifeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_keby2")
stretch_mode = 2

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer/LifeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_keby2")
stretch_mode = 2

[node name="TextureRect6" type="TextureRect" parent="HBoxContainer/LifeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_keby2")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 194.5
offset_top = -4.0
offset_right = 285.5
offset_bottom = 21.0
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1

[node name="HighScore" type="Label" parent="MarginContainer2"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_pb0ql")
theme_override_font_sizes/font_size = 24
text = "00"
horizontal_alignment = 1
justification_flags = 35
clip_text = true
